# flexiflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/workflows/: tests.yml
docs/: index.md
docs/design/: v0.4.0-statepacks.md
flexiflow/: __init__.py  cli.py  component.py  config_loader.py  event_manager.py  explain.py  imports.py  statepack.py  visualize.py
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: beginners.md  event-bus.md  getting-started.md  index.md  reference.md  state-machines.md
tests/: conftest.py  fixture_states.py  test_cli_smoke.py  test_explain.py  test_imports.py  test_observability.py  test_statepack.py  test_visualize.py
